--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,5 +1,4 @@
 name: Terraform EC2 Provisioning
-
 on:
   push:
     branches:
@@ -7,11 +6,14 @@ on:
 
 jobs:
   terraform:
-    name: Terraform Apply
+    name: Provisioning AWS EC2 with Terraform
     runs-on: ubuntu-latest
 
     env:
       TF_WORKSPACE: hashicorp-lab
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
 
     steps:
       - name: Checkout code
@@ -27,13 +29,8 @@ jobs:
       
       - name: Terraform Init
         run: terraform init
-
       - name: Terraform Plan
         run: terraform plan
 
       # - name: Terraform Apply
       #   run: terraform apply -auto-approve
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
