--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      TF_CLOUD_ORGANIZATION: uday-devops-terraform
       TF_WORKSPACE: hashicorp-lab
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
